--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "brian2694/laravel-toastr": "^5.5",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1"
     },
@@ -19,7 +22,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "sven/artisan-view": "^3.3"
     },
     "config": {
         "optimize-autoloader": true,
