--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0",
-        "sven/artisan-view": "^3.3"
+        "sven/artisan-view": "^3.3",
+        "laravelrus/localized-carbon": "1.*"
     },
     "config": {
         "optimize-autoloader": true,
